# addglyph

./: LICENSE  README.md  addglyph.py  build-requirements.txt  build.bat  build_ico.sh  cli.py  license_dist.txt  monkeypatch.py  pyinstaller.bat  pyproject.toml  requirements.txt  setup.py  usage.txt  version-file.txt
.github/workflows/: ci.yml  release.yml
addglyph/: __init__.py  __main__.py  error.py  gsub.py  inputfile.py  main.py  monkeypatch.py
