[project]
name = "addglyph"
version = "2.3"
description = "フォントに空のグリフを追加するプログラム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools[repacker]==4.55.8",
]

[dependency-groups]
build = [
    "pyinstaller>=6.11.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
  "UP",
]
